# Dragon2D

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
game/: inputs.xml  run.py
game/game/: __init__.py
game/maps/: test.tmx
game/tilesets/: terrain_atlas.tsx
src/: CMakeLists.txt
src/dummy/: dummymain.cpp
src/editors/: animationeditor.cpp  animationeditor.h  editor.h  filedialog.cpp  filedialog.h  inputeditor.cpp  inputeditor.h  overlay.cpp  overlay.h
src/python/: commonbindings.cpp  python.cpp  python.h
src/runtime/: filename.cpp  filename.h  main.cpp  window.cpp  window.h
src/systems/: animation.cpp  animation.h  camera.cpp  camera.h  collision.cpp  collision.h  component.cpp  component.h  entity.cpp  entity.h  entitymanager.cpp  entitymanager.h  init.cpp  init.h  input.cpp  input.h  position.cpp  position.h  render.cpp  render.h  rendercomponents.cpp  rendercomponents.h  simplephysics.cpp  simplephysics.h  sprite.cpp  sprite.h  tick.cpp  tick.h  tilemap.cpp  tilemap.h  transform.cpp  transform.h
src/util/: rect.cpp  rect.h  slotmap.h  slotmap.natvis  xmlhelpers.h
src/util/tiled/: tmx.cpp  tmx.h  tsx.cpp  tsx.h
